# eX

./: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
backend/: main.py  pyproject.toml  requirements.txt  setup.py
backend/xplorer/: __init__.py  protocol.py  server.py
backend/xplorer/core/: __init__.py  clipboard.pyx  filesystem.pyx  shell.pyx  thumbnail.pyx  types.pxd  watcher.pyx
backend/xplorer/services/: __init__.py  clipboard_service.py  file_service.py  registry_service.py  sevenzip_service.py  shell_service.py  theme_service.py  watch_service.py
backend/xplorer/utils/: __init__.py  icons.py  permissions.py
scripts/: build-backend.py  build.js  generate-tray-icon.py  wait-and-start.js
src/main/: index.ts
src/main/ipc/: MessageProtocol.ts  ZmqBridge.ts
src/main/state/: GlobalState.ts  TabState.ts
src/main/window/: WindowManager.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  tabbar.html  tabbar.tsx
src/renderer/components/common/: InputContextMenu.css  InputContextMenu.tsx
src/renderer/components/explorer/: ContextMenu.css  ContextMenu.tsx  CustomizeDialog.css  CustomizeDialog.tsx  EmptySpaceContextMenu.tsx  ExplorerPane.css  ExplorerPane.tsx  FileList.css  FileList.tsx
src/renderer/contexts/: StateProvider.tsx
src/renderer/store/: fileStore.ts  folderSizeCacheStore.ts  settingsStore.ts  tabStore.ts  themeStore.ts
src/renderer/styles/: App.css  index.css  variables.css
src/shared/types/: file.ts  index.ts  ipc.ts
src/types/: msgpack-lite.d.ts
(+25 files in other folders)
