[build-system]
requires = ["setuptools>=69.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xplorer-backend"
version = "0.0.1-alpha"
description = "A minimal open-source replacement for Microsoft Windows Explorer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "XPLORER Team" }
]
dependencies = [
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
    "pywin32>=306",
    "pillow>=10.0.0",
    "cython>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
]
build = [
    "nuitka>=2.0",
    "pyinstaller>=6.0",
]

[project.scripts]
xplorer-server = "xplorer.server:main"

[tool.setuptools]
packages = ["xplorer", "xplorer.core", "xplorer.services", "xplorer.utils"]

[tool.setuptools.package-data]
"xplorer.core" = ["*.pxd", "*.pyx"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
